--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "framer-motion": "^3.2.2-rc.1",
     "next": "latest",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-is": "^17.0.1",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-is": "~16.9.0",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
